Replaced URL unroller, added Manifest from mcmod.info